# traypp

./: CMakeLists.txt
cmake/: TrayppConfig.cmake.in
tray/include/core/linux/: tray.hpp
tray/include/core/windows/: tray.hpp
tray/src/core/windows/: tray.cpp
